--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="buttons">
+      <button class="btn">Rock</button>
+      <button class="btn">Paper</button>
+      <button class="btn">Scissors</button>
+    </div>
+    <div class="result-container">
+      <div class="result">Result here</div>
+    </div>
+    <div class="score-container">
+      Your Score : <span id="yourScore">0</span>
+    </div>
+    <div class="score-container">Bot Score : <span id="botScore">0</span></div>
     <script src="./app.js"></script>
   </body>
 </html>
