--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="rules">
+      <p>Whoever reached 5 is the winner of the match</p>
+    </div>
     <div class="buttons">
       <button class="btn">Rock</button>
       <button class="btn">Paper</button>
