redoing it for practice

--- a/index.html
+++ b/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <div class="rules">
-      <p>Whoever reached 5 is the winner of the match</p>
-    </div>
-    <div class="buttons">
-      <button class="btn">Rock</button>
-      <button class="btn">Paper</button>
-      <button class="btn">Scissors</button>
-    </div>
-    <div class="result-container">
-      <div class="result">Result here</div>
-    </div>
-    <div class="score-container">
-      Your Score : <span id="yourScore">0</span>
-    </div>
-    <div class="score-container">Bot Score : <span id="botScore">0</span></div>
-    <script src="./app.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+  <script src="./app.js"></script>
+</body>
+
 </html>
