--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-
+  <h1>Rock Paper Scissors</h1>
+  <button>Rock</button>
+  <button>Paper</button>
+  <button>Scissors</button>
+  <div class="results">
+    <div class="roundWinner">Round winner will be shown here</div>
+    <div class="userScore">Your Score : 0</div>
+    <div class="computerScore">Computer Score : 0</div>
+  </div>
   <script src="./app.js"></script>
 </body>
 
